@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_proxy_wstunnel: Stop leaking websockets backend connections under
+     event MPMi (trunk-only). [Eric Covener]
+
   *) mod_proxy_wstunnel: Don't issue AH02447 and log a 500 on routine 
      hangups from websockets origin servers. PR 56299
      [Yann Ylavic, Edward Lu <Chaosed0 gmail com>, Eric Covener] 
